--- a/test/docker-compose.yml
+++ b/test/docker-compose.yml
@@ -27,7 +27,7 @@ services:
     ports:
     - 443:443
     volumes:
-    - ./kubesync.json:/config/kubesync.json:ro
+    - ./config:/config/:ro
 
     
 
