--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,9 @@ services:
   - docker
 
 env:
-  - DOCKER_COMPOSE_VERSION=1.21.2
+  global:
+    - DOCKER_COMPOSE_VERSION=1.21.2
+    - SH=bash
 
 before_install:
   - sudo rm /usr/local/bin/docker-compose
